fix screen shift when bringing modal up

--- a/styles/utilities.scss
+++ b/styles/utilities.scss
@@ -3,12 +3,16 @@
 
   .modal-open {
     overflow: hidden;
-    // margin-right: 1.5rem !important;
+    margin-right: 2.25rem !important;
     // padding-left: 0rem;
     // padding-top: 0rem;
     // padding-right: 0rem;
     // margin-left: 0;
     // margin-top: 0;
+
+    @media (max-width: 1000px) {
+      margin-right: 0rem;
+    }
   }
 
   .animate {
